# shape-synthesis-v2

./: .gitignore  02_02_inversion_letter_low.ipynb  02_03_inversion_mnist.ipynb  02_modelnet_encoder.ipynb  2  README.md  custom_ect.py  dataset_qm9.py  density.ipynb  density.py  environment.yaml  inversion.py  inversion_qm9.py  main.py  main_multi.py  main_qm9.py  njit.py  peak_finding.py  performance_unique.py  plot.py  plot_result.py  plot_result_new.py  plot_vqvae_recon.py  profile_recon.py  profile_vmap.py  pyproject.toml  reconstruction_qm9.py  reconstruction_vqvae.py  requirements.txt  scratch.py  scratch_faster_inversion.py  scratch_inversion_er.py  scratch_inversion_qm9_er.py  scratch_logger.py  scratch_maxima.py  scratch_mnist.py  scratch_mnist_dataset.py  scratch_qm9.py  scratch_qm9_dataset.py  scratch_recon.py  (+4 more)
.jukit/: .jukit_info.json  density_outhist.json  inversion_qm9_outhist.json  njit_outhist.json  plot_outhist.json
config/: mnist.yaml  qm9.yaml  vqvae_qm9.yaml
log/batched_dot/: MININT-TDMRJO1_112723.1756156793061406194.pt.trace.json  MININT-TDMRJO1_112885.1756156826676258841.pt.trace.json  MININT-TDMRJO1_113427.1756156858296799823.pt.trace.json  MININT-TDMRJO1_113592.1756156913135392747.pt.trace.json  MININT-TDMRJO1_113917.1756157021054269456.pt.trace.json  MININT-TDMRJO1_114230.1756157081205682368.pt.trace.json  MININT-TDMRJO1_114391.1756157099536826297.pt.trace.json
log/model/: MININT-TDMRJO1_114918.1756157202194078996.pt.trace.json  MININT-TDMRJO1_114918.1756157202196749309.pt.trace.json  (+2 more)
notebooks/: 00_01_invert.ipynb  01_Variational_AutoEncoder.ipynb  VAEtoy2d.ipynb  dataset_mnist.ipynb  inverse_ect_tryouts.ipynb  qm9.ipynb
notebooks/graph_inversion/: 02_modelnet.ipynb  (+13 more)
shape_synthesis/: configs.py  evaluate.py  train.py  train_encoder.py
src/: configs.py  evaluate.py  infer_img2img_pretrained_dff.py  sample_ddpm.py  timing.py  train.py  train_ddpm.py  train_decoder.py  train_pretrained_stable_diff.py  train_vqvae.py  train_vqvae_ddpm.py  train_vqvae_ddpm_qm9.py  train_vqvae_new.py  train_vqvae_qm9.py
(+52 files in other folders)
