[project]
name = "example-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10.12"
dependencies = [
    "dect",
    "kaolin",
    "ipykernel>=6.29.5",
    "kaolin>=0.1",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "pip>=25.1.1",
    "pyyaml>=6.0.2",
    "tensorboard>=2.19.0",
    "torch~=2.5.1",
    "torch-fidelity>=0.3.0",
    "scikit-image>=0.25.2",
    "pyvista[jupyter]>=0.45.3",
    "trame>=3.11.0",
    "ipywidgets>=8.1.7",
    "vtk>=9.4.2",
    "pyqt5>=5.15.11",
    "plotly>=6.2.0",
    "numba>=0.61.2",
]

# Needs to be done later.
# [project.scripts]
# train = "shape_synthesis.train:main"
# evaluate = "shape_synthesis.evaluate:main"


[[tool.uv.index]]
name = "kaolin-source"
url = "https://nvidia-kaolin.s3.us-east-2.amazonaws.com/index.html"
explicit = true

[tool.uv.sources]
kaolin = { url = "https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.5.1_cu124/kaolin-0.17.0-cp310-cp310-linux_x86_64.whl" }
dect = { git = "https://github.com/aidos-lab/dect.git" }

[tool.hatch.build.targets.wheel]
packages = ["src/*"]

###########################

[tool.pyright]
strict = ["strec"]
ignore = ["tests"]
venvPath = "."
venv = ".venv"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


